#49 Align play btn, fix minimal width and variable selection sectionwidth

--- a/src/assets/stylesheets/components/componentslist.scss
+++ b/src/assets/stylesheets/components/componentslist.scss
@@ -4,7 +4,6 @@
 ul.componentsListe {
     padding: 0;
     width: base.$component-width;
-    min-width: base.$component-min-width;
     margin: 0 auto;
 
     &,
